Updates to sub badges plus spacing fixes.

--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -56,6 +56,10 @@
       margin: 0 25px;
       transition: all .2s ease-in-out;
 
+      img {
+        width: 125px;
+      }
+
       &:hover {
         transform: translateY(-5px);
       }
