--- a/sass/pages/_single.scss
+++ b/sass/pages/_single.scss
@@ -1,9 +1,5 @@
 .single-post {
 
-  .wrap {
-    padding: 50px 0;
-  }
-
   .post-notes-title {
     margin-bottom: 20px;
   }
